--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
      Some silly changes from master branch
 -->
 <head>
-	<title>Updating Title for Stach Example</title>
+	<title>Updating Title for Stach Branch Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
